--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -697,6 +697,7 @@ a:active {
       h1 .hexagon { display:none; }
       h2 { font-size: 2rem; }
       h3 { font-size: 1.5rem; }
+      h4 { font-size: 1.25rem; }
     } // END body
   }
 
