--- a/css/ebi-global-includes/_ebi_theme_settings.scss
+++ b/css/ebi-global-includes/_ebi_theme_settings.scss
@@ -21,7 +21,7 @@ $ebi-colour-training: $ebi-colour-gold;
 $ebi-colour-industry: $ebi-colour-blue;
 $ebi-colour-elixir: $ebi-colour-orange;
 
-// Generic colours not attached to the EBI brand
+// Generic colours
 $success-color: #3adb76;
 $warning-color: #ffae00;
 $alert-color: #ec5840;
