Add medium grey for H4

--- a/css/foundation/_settings.scss
+++ b/css/foundation/_settings.scss
@@ -113,7 +113,7 @@
 // $global-lineheight: 1.5;
 $foundation-palette: (
   primary: $primary-color,
-  secondary: $ebi-colour-dark-grey,
+  secondary: $ebi-colour-medium-grey,
   success: $success-color,
   warning: $warning-color,
   alert: $alert-color,
