--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -66,7 +66,7 @@ a.button, a.button:visited { color: $ebi-colour-light; }
 div#global-masthead { background-color: #333; }
 h1, h2, h3, h4, h5, h6 { color: $body-font-color; }
 
-h4 { color: $ebi-colour-dark-grey; }
+h4 { color: $ebi-colour-medium-grey; }
 a { color:#3e3e3e; }
 a:visited { color: $ebi-colour-dark-grey; }
 a:hover,
