Add intro unit pattern support
For https://github.com/ebiwd/EBI-Pattern-library/issues/8

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -830,6 +830,19 @@ code {
   margin-bottom: 1px;
   border-right: 1px solid #fff; }
 
+/* intro unit */
+.intro-unit {
+  padding-top: 3rem;
+  padding-bottom: 2rem; }
+  .intro-unit h2 {
+    font-size: 3rem;
+    margin-bottom: 0; }
+  .intro-unit h3 {
+    padding-bottom: 1rem; }
+  .intro-unit .lead {
+    color: #666;
+    margin-bottom: .5rem; }
+
 /* read more */
 a.read-more:after,
 a.readmore:after,
