Callouts: Tweak lines/shading
For: https://github.com/ebiwd/EBI-Pattern-library/issues/9

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -86,6 +86,13 @@ a:active {
   background-color: #666;
   padding: 0 0.2em; }
 
+.callout {
+  background: #f7f7f7;
+  border: none; }
+
+div.warning {
+  border: none; }
+
 .ebi-background, a.ebi-background, .tag.ebi-background, .button.ebi-background {
   background: #007c82; }
 
