--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -117,28 +117,28 @@ div.warning {
 .secondary-background, a.secondary-background, .tag.secondary-background, .button.secondary-background {
   background: #666; }
 
-.ebi-color, .label.ebi-color, a.ebi-color, a:hover.ebi-color {
+.ebi-color, .ebi-color a, .ebi-color a:visited, .ebi-color h3, .ebi-color h4, .label.ebi-color, a.ebi-color, a:hover.ebi-color {
   color: #007c82; }
 
-.services-color, .label.services-color, a.services-color, a:hover.services-color {
+.services-color, .services-color a, .services-color a:visited, .services-color h3, .services-color h4, .label.services-color, a.services-color, a:hover.services-color {
   color: #389198; }
 
-.research-color, .label.research-color, a.research-color, a:hover.research-color {
+.research-color, .research-color a, .research-color a:visited, .research-color h3, .research-color h4, .label.research-color, a.research-color, a:hover.research-color {
   color: #6dab49; }
 
-.training-color, .label.training-color, a.training-color, a:hover.training-color {
+.training-color, .training-color a, .training-color a:visited, .training-color h3, .training-color h4, .label.training-color, a.training-color, a:hover.training-color {
   color: #e9b400; }
 
-.industry-color, .label.industry-color, a.industry-color, a:hover.industry-color {
+.industry-color, .industry-color a, .industry-color a:visited, .industry-color h3, .industry-color h4, .label.industry-color, a.industry-color, a:hover.industry-color {
   color: #0086b4; }
 
-.elixir-color, .label.elixir-color, a.elixir-color, a:hover.elixir-color {
+.elixir-color, .elixir-color a, .elixir-color a:visited, .elixir-color h3, .elixir-color h4, .label.elixir-color, a.elixir-color, a:hover.elixir-color {
   color: #fb6a2a; }
 
-.white-color, .label.white-color, a.white-color, a:hover.white-color {
+.white-color, .white-color a, .white-color a:visited, .white-color h3, .white-color h4, .label.white-color, a.white-color, a:hover.white-color {
   color: white; }
 
-.secondary-color, .label.secondary-color, a.secondary-color, a:hover.secondary-color {
+.secondary-color, .secondary-color a, .secondary-color a:visited, .secondary-color h3, .secondary-color h4, .label.secondary-color, a.secondary-color, a:hover.secondary-color {
   color: #666; }
 
 /*
