--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -592,6 +592,13 @@ a:active {
     opacity: .8;
     overflow: hidden;
   }
+
+  .medium-4 > .with-overlay,
+  .medium-3 > .with-overlay {
+    // sidebar overlays should always have a bottom margin
+    margin-bottom: .75rem;
+  }
+
   .with-overlay {
     position: relative;
 
