--- a/css/ebi-global-drupal.css
+++ b/css/ebi-global-drupal.css
@@ -114,3 +114,10 @@ li.columns { list-style-type: none; }
 
 /* Breadcrumbs */
 ul.breadcrumbs { padding-top: 1rem; }
+
+/* Panels IPE */
+.medium-4 > .panels-ipe-sort-container .with-overlay,
+.medium-3 > .panels-ipe-sort-container .with-overlay {
+  // sidebar overlays should always have a bottom margin
+  margin-bottom: .75rem;
+}
