Add utility cap classes

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -529,6 +529,15 @@ body .breadcrumbs a {
   color: #0a0a0a;
   font-family: Consolas, "Liberation Mono", Courier, monospace; }
 
+.title-cap {
+  text-transform: capitalize; }
+
+.uppercase {
+  text-transform: uppercase; }
+
+.lowercase {
+  text-transform: lowercase; }
+
 /* Custom styling for different local masthead */
 #local-title.logo-only img,
 #local-title.logo-title img,
