--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -205,36 +205,32 @@ a:active {
     color: #fff;
   }
 
-  /* Menu triangles */
-  #local-masthead  {
-    nav ul#secondary-menu-links.menu li a:hover:after,
-    nav ul#global-nav.menu li a:hover:after,
-    nav ul.menu li a:hover:after {
-      position: relative;
-      content: '';
-      width: 0;
-      display: block;
-      left: 50%;
-      top: 6px;
-      height: 0;
-      bottom: 0;
-      margin: 0 -36px -5px -18px;
-      border-left: 18px solid transparent;
-      border-right: 18px solid transparent;
-      border-bottom: 5px solid rgb(0,0,0);
-      border-top: none;
-      -moz-transform: scale(0.999);
-      -webkit-backface-visibility: hidden;
-    }
+  /* Menu triangles for global bar */
+  // for medium and up only
+  @media screen and (max-width: 39.9375em) {
+    #local-masthead  {
+      nav ul#secondary-menu-links.menu li a:hover:after {
+        position: relative;
+        content: '';
+        width: 0;
+        display: block;
+        left: 50%;
+        top: 6px;
+        height: 0;
+        bottom: 0;
+        margin: 0 -36px -5px -18px;
+        border-left: 18px solid transparent;
+        border-right: 18px solid transparent;
+        border-bottom: 5px solid rgb(0,0,0);
+        border-top: none;
+        -moz-transform: scale(0.999);
+        -webkit-backface-visibility: hidden;
+      }
 
-    nav ul#global-nav.menu li.float-right a:hover:after { display: none; }
-
-    nav ul#secondary-menu-links.menu li a:hover:after,
-    nav ul.dropdown.menu.float-left li a:hover:after {
-      border-bottom-color: #fff;
-      margin-bottom: -5px;
+      nav ul#global-nav.menu li.float-right a:hover:after { display: none; }
     }
-  } // END #local-masthead
+  }
+  // END #local-masthead
 
   /* EMBL Dropdwon styles */
   #embl-dropdown {
