--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -900,6 +900,7 @@ table.no-stripe tbody tr:nth-child(even) { background-color: #fff; }
       max-width: 96%;
       min-width: 1000px;
   }
+  body.full-width .row .row { max-width: 100%; }
 }
 
 /* tag */
