--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -742,6 +742,20 @@ code { font-size: .95rem; }
 .button:hover,
 .button.hover { background-color: rgba(255,255,255,.5);}
 
+/* tabs */
+.tabs-title > {
+  a { border-bottom: none; }
+  a:hover {
+    background-color: $ebi-colour-main;
+    color: $ebi-colour-white;
+  }
+  a:focus,
+  a[aria-selected='true'] {
+    color: $ebi-colour-white;
+    background: $ebi-colour-dark-grey;
+  }
+}
+
 /* related / popular */
 .related {
   background: #333;
