--- a/css/theme-template.css
+++ b/css/theme-template.css
@@ -10,6 +10,7 @@ a {
 dl dt a,
 a.label,
 .label,
+.tabs-title > a:hover,
 a:hover,
 a:focus,
 a:active {
@@ -24,6 +25,7 @@ a.special { background-color: #7cd17c; }
 
 .menu .active > a,
 .tag,
+.tabs-title > a:hover
 .button,
 .button.primary {
   background-color: rgb(0,124,130);
@@ -33,6 +35,11 @@ a.special { background-color: #7cd17c; }
 .button:hover,
 .button:focus,
 .button:active { background: rgba(0,124,130,.9); }
+
+.tabs-title > a:focus,
+.tabs-title > a[aria-selected='true'] {
+  color: #fff;
+  background: #666; }
 
 div#local-masthead { background-color: rgb(0,124,130); }
 
