--- a/css/ebi-global-drupal.css
+++ b/css/ebi-global-drupal.css
@@ -11,6 +11,7 @@
 /* Don't underline active tabs, or highligh active trails */
 #local-masthead nav ul li a.active { border-bottom: none; }
 #local-masthead ul li.active-trail a.active { background: none; color: #fff; font-weight: 400; border-right: 1px solid #fff; }
+#local-masthead ul li.active a.active { background: #fff; color: #333; font-weight: 600; border-right: none; }
 
 /* Pad top of content */
 main.row { margin-top: .5rem; }
