Refine default styling of .tag and a.tag

--- a/css/ebi-global-includes/_tag.scss
+++ b/css/ebi-global-includes/_tag.scss
@@ -35,11 +35,15 @@ $tag-radius: $global-radius !default;
 }
 
 @mixin ebi-tag {
+  a.tag {
+    color: $tag-color;
+  }
   .tag {
     @include tag;
 
     background: $tag-background;
     color: $tag-color;
+    border-bottom: none;
 
     // @each $name, $color in $foundation-palette {
     //   @if $name != primary {
