Add tag styling options to theme boilerplate

--- a/css/theme-ebi-training.css
+++ b/css/theme-ebi-training.css
@@ -28,6 +28,8 @@ a.special { background-color: #7cd17c; }
 .button.primary {
   background-color: rgb(233,180,0);
 }
+a.tag:hover { color: #fff; }
+
 .tabs-title > a:hover,
 .button.primary:hover,
 .button.primary:focus,
