--- a/css/theme-template.css
+++ b/css/theme-template.css
@@ -29,6 +29,8 @@ a.special { background-color: #7cd17c; }
 .button.primary {
   background-color: rgb(0,124,130);
 }
+a.tag:hover { color: #fff; }
+
 .tabs-title > a:hover,
 .button.primary:hover,
 .button.primary:focus,
