--- a/css/theme-ebi-services-about.css
+++ b/css/theme-ebi-services-about.css
@@ -1,45 +1,1 @@
-/*
-  Colour palette: EMBL-EBI Services and About
-*/
-
-a {
-  color: #222;
-}
-
-dl dt a,
-a.label,
-.label,
-a:hover,
-a:focus,
-a:active {
-  color: rgb(56,145,152);
-}
-
-h1 { color: #f7f7f7; }
-h2 { color: rgb(56,145,152); }
-h3 { color: #444444; }
-
-a.special { background-color: #7cd17c; }
-
-.menu .active > a,
-.tag,
-.tabs-title > a:hover
-.button,
-.button.primary {
-  background-color: rgb(56,145,152);
-}
-.tabs-title > a:hover,
-.button.primary:hover,
-.button.primary:focus,
-.button:hover,
-.button:focus,
-.button:active { background: rgba(56,145,152,.9); }
-
-.tabs-title > a:focus,
-.tabs-title > a[aria-selected='true'] {
-  color: #fff;
-  background: #666; }
-
-div#local-masthead { background-color: rgb(56,145,152); }
-
-/* end */
+@import url("//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.1/css/theme-ebi-services-about.css");
