Tweak tag display, add alt secondary syntax

--- a/css/ebi-global-includes/_tag.scss
+++ b/css/ebi-global-includes/_tag.scss
@@ -37,6 +37,7 @@ $tag-radius: $global-radius !default;
 @mixin ebi-tag {
   a.tag {
     color: $tag-color;
+    border-bottom-style: none;
   }
   .tag {
     @include tag;
