--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -88,6 +88,7 @@ a:active {
 .industry-background, a.industry-background, .tag.industry-background, .button.industry-background  { background: $ebi-colour-industry; }
 .elixir-background, a.elixir-background, .tag.elixir-background, .button.elixir-background    { background: $ebi-colour-elixir; }
 .white-background, a.white-background, .tag.white-background, .button.white-background     { background: $ebi-colour-white; }
+.tag.secondary, 
 .secondary-background, a.secondary-background, .tag.secondary-background, .button.secondary-background { background: $ebi-colour-dark-grey; }
 
 .ebi-color, .ebi-color cite, .ebi-color a, .ebi-color a:visited, .ebi-color h3, .ebi-color h4, .label.ebi-color, a.ebi-color, a:hover.ebi-color { color: $ebi-colour-petrol; }
