Implement medium-grey

--- a/css/ebi-global-includes/_ebi_theme_settings.scss
+++ b/css/ebi-global-includes/_ebi_theme_settings.scss
@@ -27,7 +27,7 @@ $success-color: #3adb76;
 $warning-color: #ffae00;
 $alert-color: #ec5840;
 $light-gray: #e6e6e6;
-$medium-gray: #cacaca;
+$medium-gray: $ebi-colour-medium-grey;
 $dark-gray: #8a8a8a;
 
 $body-background: $ebi-colour-white;
